[feature] add package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ios-react-timer",
+  "name": "ios-react-time-picker",
   "version": "0.0.1",
   "description": "ios style time picker for React app.",
   "author": "pool1129 <pool1129@naver.com>",
