[feature] add package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ios-react-time-picker",
   "version": "0.0.1",
+  "type": "module",
   "description": "ios style time picker for React app.",
   "author": "pool1129 <pool1129@naver.com>",
   "license": "MIT",
