--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "ios-react-time-picker",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
+  "main": "dist/index.ts",
+  "scripts": {
+    "build": "npm run build:typescript",
+    "build:typescript": "tsc"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./src/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "description": "ios style time picker for React app.",
   "author": "pool1129 <pool1129@naver.com>",
   "license": "MIT",
@@ -26,12 +38,12 @@
   ],
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "^5.5.4"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0"
+    "@types/react-dom": "^18.3.0",
+    "typescript": "^5.5.4"
   }
 }
