--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "ios-react-time-picker",
   "version": "0.0.4",
   "type": "module",
-  "main": "dist/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "npm run build:typescript",
-    "build:typescript": "tsc"
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "exports": {
     ".": {
