--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ios-react-time-picker",
   "version": "0.1.6",
-  "type": "module",
+  "type": "commonjs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
