--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./src/index.cjs",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
