--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "exports": {
     ".": {
+      "default": "./dist/index.js",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
