--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "lib": ["es5", "es6", "dom"],
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
