--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ios-react-time-picker",
-  "version": "0.1.13",
+  "version": "0.1.12",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,10 +9,15 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     }
+  },
+  "scripts": {
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "description": "ios style time picker for React app.",
   "author": "pool1129 <pool1129@naver.com>",
