--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "private": "false",
   "files": [
     "dist"
   ],
