--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,22 @@
 {
-    "compilerOptions": {
-      "moduleResolution": "node",
-      "module": "ESNext",
-      "target": "es6",
-      "outDir": "dist",
-      "lib": ["es5", "es6", "dom"],
-      "rootDir": "./src",
-      "strict": true,
-      "esModuleInterop": true,
-      "declaration": true,
-      "sourceMap": true,
-      "jsx": "react"
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"]
-  }
-  
+  "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "noEmit": false,
+    "declaration": true,
+    "outDir": "./dist"
+  },
+  "include": ["./src/lib/**/*.tsx", "./src/lib/**/*.ts"]
+}
