--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: ios-react-time-picker update
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  release: 
+  release:
     permissions:
       # 저장소의 컨텐츠에 대한 쓰기 권한 부여
       contents: write
@@ -19,34 +19,36 @@ jobs:
         id: semver
         run: echo "::set-output name=version::${GITHUB_REF#refs/tags/v}"
       - uses: actions/checkout@v4
-        with: 
+        with:
           ref: v${{ steps.semver.outputs.version }}
+
       # npm 배포를 위한 Node 설치
       - uses: actions/setup-node@v3.6.0
         with:
-          node-version: '20.3.0'  
+          node-version: "20.3.0"
+
       # 깃허브 봇으로 package.json 파일 version 을 git tag 버전으로 업데이트
       - name: update package version
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
+          git tag -d ${{ github.ref_name }} || true
+          git push origin :refs/tags/${{ github.ref_name }} || true
           npm version ${{ steps.semver.outputs.version }}
+
       # 업데이트 버전 commit / push
       - name: commit updated package version
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: '[chore] update package version'
+          commit_message: "[chore] update package version"
           branch: main
-      # git tag가 존재할 경우 삭제
-      - name: delete exist tag
-        run: |
-          git tag -d ${{ github.ref_name }} || true
-          git push origin :refs/tags/${{ github.ref_name }} || true
+
       # git tab 신규 생성
       - name: update git tag
         run: |
           git tag -f ${{ github.ref_name }}
           git push --force origin ${{ github.ref_name }}
+
       # npm의 access token을 사용해 배포
       - run: npm publish
         env:
