--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,11 @@ on:
 jobs:
   release:
     permissions:
-      # 저장소의 컨텐츠에 대한 쓰기 권한 부여
-      contents: write
+      # 저장소의 컨텐츠에 대한 읽기 권한 부여
+      contents: read
       # 풀 리퀘스트에 관련된 작업에 쓰기 권한 부여
       pull-requests: write
-      id-token: write
+      packages: write
     runs-on: ubuntu-latest
     steps:
       # refs/tags/vX.Y.Z 형식의 태그에서 X.Y.Z 버전 번호만 출력해 version 변수에 저장
