--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: ios-react-time-picker publish
 
 on:
   push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+    branches: 
+      - main
 
 jobs:
   release:
@@ -14,13 +14,25 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      # refs/tags/vX.Y.Z 형식의 태그에서 X.Y.Z 버전 번호만 출력해 version 변수에 저장
-      - name: get semantic version
-        id: semver
-        run: echo "::set-output name=version::${GITHUB_REF#refs/tags/v}"
-      - uses: actions/checkout@v4
-        with:
-          ref: v${{ steps.semver.outputs.version }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Get commit message
+        id: message
+        run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
+
+      - name: Get version from commit message
+        id: version
+        run: |
+          version=$(echo "${{ steps.get_commit_message.outputs.message }}" | grep -oP 'v\d+\.\d+\.\d+')
+          echo "::set-output name=version::$version"
+
+      - name: Checkout version
+        run: |
+          if [ -z "${{ steps.extract_version.outputs.version }}" ]; then
+            echo "Version not found in commit message"
+            exit 1
+          fi
 
       # npm 배포를 위한 Node 설치
       - uses: actions/setup-node@v3.6.0
