--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,14 @@ jobs:
         run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
 
       - name: Get version from commit message
-        id: version
+        id: extract_version
         run: |
           version=$(echo "${{ steps.get_commit_message.outputs.message }}" | sed -n 's/.*\(v[0-9]\+\.[0-9]\+\.[0-9]\+\).*/\1/p')
           echo "::set-output name=version::$version"
 
       - name: Check version
         run: |
-          if [ -z "${{ steps.version.outputs.version }}" ]; then
+          if [ -z "${{ steps.extract_version.outputs.version }}" ]; then
             echo "Version not found in commit message"
             exit 1
           fi
@@ -50,9 +50,9 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git tag -d ${{ steps.version.outputs.version }} || true
-          git push origin :refs/tags/${{ steps.version.outputs.version }} || true
-          npm version ${{ steps.version.outputs.version }}
+          git tag -d ${{ steps.extract_version.outputs.version }} || true
+          git push origin :refs/tags/${{ steps.extract_version.outputs.version }} || true
+          npm version ${{ steps.extract_version.outputs.version }}
 
       # 업데이트 버전 commit / push
       - name: Commit updated package version
@@ -64,8 +64,8 @@ jobs:
       # git tab 신규 생성
       - name: Update git tag
         run: |
-          git tag -f ${{ github.ref_name }}
-          git push --force origin ${{ github.ref_name }}
+          git tag -f ${{ steps.extract_version.outputs.version }}
+          git push --force origin ${{ steps.extract_version.outputs.version }}
 
       # npm의 access token을 사용해 배포
       - run: NPM publish
