--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Get commit message
-        id: message
+        id: get_commit_message
         run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
 
       - name: Get version from commit message
         id: extract_version
         run: |
-          version=$(echo "${{ steps.get_commit_message.outputs.message }}" | sed -n 's/.*\(v[0-9]\+\.[0-9]\+\.[0-9]\+\).*/\1/p')
+          version=$(echo "${{ steps.get_commit_message.outputs.message }}" | sed -n 's/.*\(v[0-9]\{1,\}\.[0-9]\{1,\}\.[0-9]\{1,\}\).*/\1/p')
           echo "::set-output name=version::$version"
 
       - name: Check version
